// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`encapsulate react component to drag component encapsulate a instance 1`] = `
Object {
  "children": Object {
    "appendChild": [Function],
    "value": Array [],
  },
  "componentRenderConfig": Object {
    "componentName": "线性组件",
  },
  "isContainer": false,
  "realNode": <div>
    123
  </div>,
}
`;

exports[`encapsulate react component to drag component encapsulate a instance 2`] = `
Object {
  "children": Object {
    "appendChild": [Function],
    "value": Array [],
  },
  "componentRenderConfig": Object {
    "componentName": "线性组件",
  },
  "isContainer": true,
  "realNode": <div>
    123
  </div>,
}
`;
